# Coyote

cmake/: FindCoyoteHW.cmake
examples/00_building_for_enzian/: README.md
examples/00_building_for_enzian/hw/: CMakeLists.txt
scripts/cr_prjcts/: cr_shell.tcl.in  cr_static.tcl.in  cr_user.tcl.in
scripts/impl/: link.tcl.in
